src/styles/_layout.scss
div.main {
  min-height: 100vh;
  padding-bottom: 60px;
}
  
div.full-height {
  min-height: 100vh;
}
  
a.link-no-style {
  color: $dark;
  &:hover {
    text-decoration: none;
  }
}
  
.footer-col {
  display: flex;
  flex-direction: column;
  align-content: center;
  align-items: center;
  footer {
    display: flex;
    position: relative;
    bottom: 0;
    margin-top: -60px;
    height: 60px;
    clear: both;
    color: white;
    justify-content: center;
    width: 100%;

    span {
      align-self: center;
      text-align: center;
    }
  }
}

.hero {
  text-align: center;
  color: white;
}

.site-header {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 100;
}

.welcome-header {
  color: #fff;
  height: calc(100vh - 56px);
  background-image: url(https://images.unsplash.com/photo-1531656590736-7daa7b84554e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80);
  background-size: cover;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  // margin-bottom: 20px;
}

.welcome-header h1 {
  text-align: center;
}

.welcome-header p {
  text-align: center;
}

.blog-container {
  font-size: large;
  max-width: 900px;
}

.gatsby-resp-image-figcaption {
  text-align: center;
  font-size: x-small;
  padding-top: 0.5rem;
}

/* Create big footer area with lots of padding and a light-grey background */
.footer-content-area {
  padding: 65px 0 65px 0;
  background: #e7e8ed;
}

/* Remove bullets from links in the footer */
.footer-content-area li {
  list-style: none;
}

/* Place each of the 3 footer menus in the center and give some left padding to make the left-aligned text look more centred */
.footer-menu {
  margin: 0 auto;
  padding-left: 3rem;
}

/* Give links in the footer a nice soft grey color*/
.footer-menu ul {
  padding-inline-start: 0px;
}

/* Give links in the footer a nice soft grey color*/
.footer-menu ul li a {
  color: #898b96;
  font-size: 15px;
  line-height: 32px;
}

/* Give links in the footer a hover color */
.footer-menu ul li a:hover {
  color: #5867dd;
}

/* Style the footer menu sub-titles to be more subtle */
.footer-menu-subtitle {
  line-height: 42px;
  margin-bottom: 10px;
  font-size: 18px;
}

.mini-footer {
  background: #192027;
  text-align: center;
  padding: 32px 0;
}
.mini-footer p {
  margin: 0;
  line-height: 26px;
  font-size: 15px;
  color: #999;
}

.mini-footer p a {
  color: #5867dd;
}

.mini-footer p a:hover {
  color: #34bfa3;
}

.mini-footer img {
  margin: 1rem;
  max-width: 50px;
  height: auto;
}

